[gd_scene load_steps=5 format=3 uid="uid://kdhnx6ggvk2a"]

[ext_resource type="Script" uid="uid://dtd1pwph8ibjj" path="res://Page/edit_product.gd" id="1_p31yw"]
[ext_resource type="Theme" uid="uid://57l5g8eevfsp" path="res://Theme.tres" id="2_1hkgm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nnbkb"]
bg_color = Color(0.745098, 0.862745, 0.498039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bcadx"]
bg_color = Color(0.537255, 0.635294, 0.341176, 1)

[node name="EditProduct" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p31yw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188235, 0.364706, 0.258824, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_1hkgm")

[node name="Foto" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Foto"]
layout_mode = 2
text = "Product Image       "

[node name="ItemList" type="ItemList" parent="VBoxContainer/Foto"]
custom_minimum_size = Vector2(150, 80)
layout_mode = 2
item_count = 6
item_0/text = "Drink"
item_1/text = "Snack"
item_2/text = "Meat"
item_3/text = "Soup"
item_4/text = "Vegetable"
item_5/text = "Fruit"

[node name="Nombre" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Nombre"]
layout_mode = 2
text = "Product Name      "

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/Nombre"]
custom_minimum_size = Vector2(240, 42)
layout_mode = 2
placeholder_text = "Enter product name"

[node name="ID" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/ID"]
layout_mode = 2
text = "Product ID      "

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/ID"]
custom_minimum_size = Vector2(240, 42)
layout_mode = 2
placeholder_text = "Enter product ID"

[node name="Category" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Category"]
layout_mode = 2
text = "Category      "

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/Category"]
custom_minimum_size = Vector2(250, 42)
layout_mode = 2
placeholder_text = "Enter product category"

[node name="Price" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Price"]
layout_mode = 2
text = "Buying Price      "

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/Price"]
custom_minimum_size = Vector2(250, 42)
layout_mode = 2
placeholder_text = "Enter buying price"

[node name="Quantity" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Quantity"]
layout_mode = 2
text = "Quantity      "

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/Quantity"]
custom_minimum_size = Vector2(250, 42)
layout_mode = 2
placeholder_text = "Enter product quantity"

[node name="Unit" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Unit"]
layout_mode = 2
text = "Unit      "

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/Unit"]
custom_minimum_size = Vector2(250, 42)
layout_mode = 2
placeholder_text = "Enter product unit"

[node name="Exp_Date" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Exp_Date"]
layout_mode = 2
text = "Expiry Date      "

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/Exp_Date"]
custom_minimum_size = Vector2(250, 42)
layout_mode = 2
placeholder_text = "Enter expiry date"

[node name="Treshold" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Treshold"]
layout_mode = 2
text = "Treshold Value      "

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/Treshold"]
custom_minimum_size = Vector2(250, 42)
layout_mode = 2
placeholder_text = "Enter treshold value"

[node name="Buttons" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="Discard" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Discard"

[node name="Add" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/hover = SubResource("StyleBoxFlat_nnbkb")
theme_override_styles/normal = SubResource("StyleBoxFlat_bcadx")
text = "Add Product
"

[connection signal="pressed" from="VBoxContainer/Buttons/Discard" to="." method="_on_discard_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Add" to="." method="_on_add_pressed"]
